--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "meteor-client-side": "~0.2.3",
     "angular-meteor": "~1.0.1",
     "angular-moment": "~0.10.3",
-    "accounts-phone": "~0.0.21"
+    "accounts-phone": "~0.0.21",
+    "ngletteravatar": "~3.0.1"
   }
 }
